# Proyecto1_TopicosTelematica

./: README.md  go.mod
client/: client.py
cpp-mom/: README.md
deployment/: README.md  despliegue.txt
docs/: Actividades.wsd  Arquitectura.wsd  CasoUso.wsd  Clases.wsd  Componentes.wsd  Contexto.puml  Despliegue.wsd  Milestone1_API_Issues.md  Milestone2_MOM_Core_Issues.md  Milestone3_Cluster_Issues.md  PROJECT_STRUCTURE.md  README.md  SDD_MOM_Proyecto1.md  SRS_MOM_Proyecto1.md  SecuenciaClienteNodo.wsd  SecuenciaNodNodo.wsd  contenedores.puml  home.md
go-api/: .env  README.md  docker-compose.yml  main.go
go-api/db/: db.go
go-api/middleware/: auth.go  jwt.go
go-api/routes/: messages.go  queues.go  topics.go
mom/: CMakeLists.txt  run_dev.sh
mom/data/: mom.db  mom1.db  mom50051.db  mom50052.db  mom50053.db
mom/include/: broker.hpp  mom.grpc.pb.cc  mom.grpc.pb.h  mom.pb.cc  persistence.hpp  queue.hpp  topic.hpp
mom/proto/: mom.proto
mom/src/: broker.cpp  mom_server.cpp
mom/storage/: persistence.cpp  queue.cpp  topic.cpp  user.cpp
mom1/data/: mom1.db
mom1/include/: broker.hpp  topico.hpp  usuario.hpp
mom1/proto/: mom.proto
mom1/src/: broker.cpp  mom.grpc.pb.h  mom_server.cpp
mom2/: CMakeLists.txt
mom2/data/: mom1.db  mom2.db
mom2/include/: mensaje.hpp
mom2/src/: main.cpp  mensaje.cpp  mom.grpc.pb.h  mom.pb.h  mom_server.cpp
mom3/data/: mom3.db
mom3/scripts/: run_dev.sh
mom3/src/: broker.cpp  mom.grpc.pb.cc  mom.pb.cc  mom_server.cpp  usuario.cpp
mom_core_v2/data/: mom.db
mom_core_v2/proto/: mom.proto
mom_core_v2/src/: broker.cpp  mom.grpc.pb.cc  mom.pb.h  mom_server.cpp
mom_core_v2_node1/include/: cola.hpp  persistencia.hpp
mom_core_v2_node1/src/: main_broker.cpp  mom_server.cpp  topico.cpp
mom_core_v2_node2/data/: mom_node2.db
mom_core_v2_node2/src/: cola.cpp  mom_server.cpp
mom_core_v2_node3/data/: mom_node3.db
mom_core_v2_node3/src/: mom_server.cpp  persistencia.cpp
mom_gateway/: main.go  routes.go
mom_gateway/cluster/: cluster.go
mom_gateway/handlers/: auth.go  colas.go  topicos.go
mom_gateway/pb/: mom.pb.go  mom_grpc.pb.go
mom_gateway/proto/: mom.proto
proto/: README.md
